[gd_scene load_steps=52 format=3 uid="uid://cr078078byr2o"]

[ext_resource type="Script" uid="uid://d0u0sxamyvnww" path="res://scripts/p1/phease_1.gd" id="1_72hmh"]
[ext_resource type="Texture2D" uid="uid://dkympnsaf4wu2" path="res://imgs/p1chara/footer.png" id="1_sa7t2"]
[ext_resource type="Texture2D" uid="uid://bmbx4dccuk8al" path="res://imgs/p1chara/body.png" id="2_sw3ak"]
[ext_resource type="Texture2D" uid="uid://crkloudcvcbwg" path="res://imgs/p1chara/f1.png" id="3_r4y1f"]
[ext_resource type="Texture2D" uid="uid://csdme3cnqhmem" path="res://imgs/p1chara/header.png" id="4_f4ka5"]
[ext_resource type="Texture2D" uid="uid://jptn1b7t7q5b" path="res://imgs/p1chara/f2.png" id="5_g3akm"]
[ext_resource type="Texture2D" uid="uid://8ah23xydxcrs" path="res://imgs/p1chara/head.png" id="6_wd27g"]
[ext_resource type="Texture2D" uid="uid://btgr0if05nlcv" path="res://imgs/wars/border.png" id="7_wwhx6"]
[ext_resource type="Script" uid="uid://b1sq4lde5272b" path="res://scripts/p1/PlayerNode.gd" id="8_73n52"]
[ext_resource type="Texture2D" uid="uid://bbv7ex4pxkc8u" path="res://imgs/wars/player.png" id="8_jpxx7"]
[ext_resource type="Texture2D" uid="uid://csjct8yejt87p" path="res://imgs/wars/ui_p1_fight_normal.png" id="9_1fo76"]
[ext_resource type="Texture2D" uid="uid://ck1pjcvv35fdb" path="res://imgs/wars/ui_p1_act_normal.png" id="10_llhms"]
[ext_resource type="Texture2D" uid="uid://cfhs6q7cv6l0g" path="res://imgs/wars/ui_p1_item_normal.png" id="11_1k1ee"]
[ext_resource type="Texture2D" uid="uid://co1rhffp6b1bo" path="res://imgs/wars/ui_p1_mercy_light.png" id="12_ddwbr"]
[ext_resource type="Texture2D" uid="uid://cqp0ppk6rlm3o" path="res://imgs/wars/ui_p1_mercy_normal.png" id="12_djwtf"]
[ext_resource type="Texture2D" uid="uid://bkjwhewwb12vq" path="res://imgs/wars/ui_p1_item_light.png" id="14_rev34"]
[ext_resource type="Texture2D" uid="uid://ccoifk5oqcsog" path="res://imgs/wars/ui_p1_act_light.png" id="16_khp2d"]
[ext_resource type="Texture2D" uid="uid://dofv75trcdg50" path="res://imgs/wars/ui_p1_fight_light.png" id="18_h00qw"]
[ext_resource type="Script" uid="uid://b0im5nste1jji" path="res://scripts/Text.gd" id="19_6w6yt"]
[ext_resource type="Texture2D" uid="uid://pqsoqloxsbv8" path="res://imgs/wars/rightwide.png" id="20_4mqni"]
[ext_resource type="FontFile" uid="uid://bo7jctwbec6gn" path="res://fonts/font_text.ttf" id="21_trxyp"]

[sub_resource type="Animation" id="Animation_d8fgq"]
resource_name = "normal"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Header:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(2, 2.21914, 1),
"update": 0,
"values": [Vector2(597, 109), Vector2(597, 115), Vector2(597, 109)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(600, 169), Vector2(600, 175), Vector2(600, 169)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("F1:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(2, 2, 1),
"update": 0,
"values": [Vector2(568, 131), Vector2(568, 137), Vector2(568, 131)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("F2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(2, 2, 1),
"update": 0,
"values": [Vector2(615, 138), Vector2(615, 144), Vector2(615, 138)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Head:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(602, 101), Vector2(602, 105), Vector2(602, 101)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uog65"]
_data = {
&"normal": SubResource("Animation_d8fgq")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bags0"]
size = Vector2(226, 6)

[sub_resource type="Animation" id="Animation_yvf8k"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderDown:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.165, 0.101)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_vm4j5"]
resource_name = "attick"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderDown:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.7, 0.101), Vector2(0.165, 0.101)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4.2, 1), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7dlyo"]
resource_name = "menu"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderDown:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.165, 0.101), Vector2(0.7, 0.101)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(4.2, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1i15l"]
_data = {
&"RESET": SubResource("Animation_yvf8k"),
&"attick": SubResource("Animation_vm4j5"),
&"menu": SubResource("Animation_7dlyo")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jqead"]
size = Vector2(1379.69, 57.391)

[sub_resource type="Animation" id="Animation_vajgh"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderUp:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.165254, 0.104546)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.165254, 0.104546)]
}

[sub_resource type="Animation" id="Animation_wj0kj"]
resource_name = "attick"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderUp:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.7, 0.105), Vector2(0.165, 0.105)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.69, 0.105), Vector2(0.165254, 0.104546)]
}

[sub_resource type="Animation" id="Animation_5p40i"]
resource_name = "menu"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderUp:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.165254, 0.104546), Vector2(0.7, 0.105)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.165254, 0.104546), Vector2(0.69, 0.105)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v1or6"]
_data = {
&"RESET": SubResource("Animation_vajgh"),
&"attick": SubResource("Animation_wj0kj"),
&"menu": SubResource("Animation_5p40i")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eadpk"]
size = Vector2(1357.58, 59.4102)

[sub_resource type="Animation" id="Animation_rgl3a"]
resource_name = "RESET"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(490, 409)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(490, 409)]
}

[sub_resource type="Animation" id="Animation_kst7j"]
resource_name = "attick"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(128, 409), Vector2(490, 409)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(128, 409), Vector2(490, 409)]
}

[sub_resource type="Animation" id="Animation_qk7mn"]
resource_name = "menu"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(490, 409), Vector2(128, 409)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(490, 409), Vector2(128, 409)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g2jwl"]
_data = {
&"RESET": SubResource("Animation_rgl3a"),
&"attick": SubResource("Animation_kst7j"),
&"menu": SubResource("Animation_qk7mn")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ymhh6"]
size = Vector2(1357.58, 59.4058)

[sub_resource type="Animation" id="Animation_l5oq8"]
resource_name = "RESET"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(712, 409)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(712, 409)]
}

[sub_resource type="Animation" id="Animation_5b1ke"]
resource_name = "attick"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1075, 409), Vector2(712, 409)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1075, 409), Vector2(712, 409)]
}

[sub_resource type="Animation" id="Animation_77wch"]
resource_name = "menu"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BorderRight:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(712, 409), Vector2(1075, 409)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(712, 409), Vector2(1075, 409)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_n5cqq"]
_data = {
&"RESET": SubResource("Animation_l5oq8"),
&"attick": SubResource("Animation_5b1ke"),
&"menu": SubResource("Animation_77wch")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4p54t"]
size = Vector2(22, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_dvf1m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_djwtf")
}, {
"duration": 1.0,
"texture": ExtResource("12_ddwbr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_0ji78"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_1k1ee")
}, {
"duration": 1.0,
"texture": ExtResource("14_rev34")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rofb8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_llhms")
}, {
"duration": 1.0,
"texture": ExtResource("16_khp2d")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_oywmk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_1fo76")
}, {
"duration": 1.0,
"texture": ExtResource("18_h00qw")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_wkyij"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 2.07053),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"set_pane_v"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ibbse"]
_data = {
&"RESET": SubResource("Animation_wkyij")
}

[sub_resource type="LabelSettings" id="LabelSettings_yppvp"]
font = ExtResource("21_trxyp")
font_size = 35
shadow_size = 2
shadow_color = Color(1, 1, 1, 0.462745)

[node name="2DRoot" type="Node2D"]
script = ExtResource("1_72hmh")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -19.0
offset_top = -12.0
offset_right = 1213.0
offset_bottom = 710.0
color = Color(0, 0, 0, 1)

[node name="Chara" type="Sprite2D" parent="."]
position = Vector2(0, -41)

[node name="Footer" type="Sprite2D" parent="Chara"]
position = Vector2(607, 245)
scale = Vector2(0.251, 0.251)
texture = ExtResource("1_sa7t2")

[node name="Body" type="Sprite2D" parent="Chara"]
position = Vector2(600, 169)
scale = Vector2(0.251, 0.249)
texture = ExtResource("2_sw3ak")

[node name="F1" type="Sprite2D" parent="Chara"]
position = Vector2(568, 131)
scale = Vector2(0.251, 0.32)
texture = ExtResource("3_r4y1f")

[node name="Header" type="Sprite2D" parent="Chara"]
position = Vector2(597, 109)
scale = Vector2(0.251, 0.234)
texture = ExtResource("4_f4ka5")

[node name="F2" type="Sprite2D" parent="Chara"]
position = Vector2(615, 138)
scale = Vector2(0.251, 0.251)
texture = ExtResource("5_g3akm")

[node name="Head" type="Sprite2D" parent="Chara"]
position = Vector2(602, 101)
scale = Vector2(0.248645, 0.231419)
texture = ExtResource("6_wd27g")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Chara"]
libraries = {
"": SubResource("AnimationLibrary_uog65")
}

[node name="BDOWN" type="CharacterBody2D" parent="."]

[node name="BorderDown" type="Sprite2D" parent="BDOWN"]
position = Vector2(601, 518)
scale = Vector2(0.165, 0.101)
texture = ExtResource("7_wwhx6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BDOWN"]
position = Vector2(601, 518)
shape = SubResource("RectangleShape2D_bags0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BDOWN"]
libraries = {
"": SubResource("AnimationLibrary_1i15l")
}

[node name="BUP" type="CharacterBody2D" parent="."]

[node name="BorderUp" type="Sprite2D" parent="BUP"]
position = Vector2(600, 300)
scale = Vector2(0.165254, 0.104546)
texture = ExtResource("7_wwhx6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BUP"]
position = Vector2(601, 300)
scale = Vector2(0.165254, 0.104546)
shape = SubResource("RectangleShape2D_jqead")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BUP"]
libraries = {
"": SubResource("AnimationLibrary_v1or6")
}

[node name="BLEFT" type="CharacterBody2D" parent="."]

[node name="BorderLeft" type="Sprite2D" parent="BLEFT"]
position = Vector2(490, 409)
rotation = 1.5708
scale = Vector2(0.165, 0.101)
texture = ExtResource("7_wwhx6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BLEFT"]
position = Vector2(490, 409)
rotation = 1.5708
scale = Vector2(0.165, 0.101)
shape = SubResource("RectangleShape2D_eadpk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BLEFT"]
libraries = {
"": SubResource("AnimationLibrary_g2jwl")
}

[node name="BRIGHT" type="CharacterBody2D" parent="."]

[node name="BorderRight" type="Sprite2D" parent="BRIGHT"]
position = Vector2(712, 409)
rotation = 1.5708
scale = Vector2(0.165, 0.101)
texture = ExtResource("7_wwhx6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BRIGHT"]
position = Vector2(712, 409)
rotation = 1.5708
scale = Vector2(0.165, 0.101)
shape = SubResource("RectangleShape2D_ymhh6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="BRIGHT"]
libraries = {
"": SubResource("AnimationLibrary_n5cqq")
}

[node name="PlayerNode" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(-1, -1)
script = ExtResource("8_73n52")

[node name="Player" type="Sprite2D" parent="PlayerNode"]
position = Vector2(603, 406)
scale = Vector2(0.631579, 0.576923)
texture = ExtResource("8_jpxx7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode"]
position = Vector2(603, 406)
shape = SubResource("RectangleShape2D_4p54t")

[node name="BattleButton" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="UiP1MercyNormal" type="AnimatedSprite2D" parent="BattleButton"]
position = Vector2(1064, 635)
scale = Vector2(0.41, 0.416)
sprite_frames = SubResource("SpriteFrames_dvf1m")

[node name="UiP1ItemNormal" type="AnimatedSprite2D" parent="BattleButton"]
position = Vector2(768, 635)
scale = Vector2(0.41, 0.435)
sprite_frames = SubResource("SpriteFrames_0ji78")

[node name="UiP1ActNormal" type="AnimatedSprite2D" parent="BattleButton"]
position = Vector2(433, 635)
scale = Vector2(0.395, 0.404)
sprite_frames = SubResource("SpriteFrames_rofb8")

[node name="UiP1FightNormal" type="AnimatedSprite2D" parent="BattleButton"]
position = Vector2(124, 635)
scale = Vector2(0.409836, 0.403846)
sprite_frames = SubResource("SpriteFrames_oywmk")

[node name="Select" type="Sprite2D" parent="BattleButton"]
position = Vector2(1003, 638)
scale = Vector2(0.631579, 0.576923)
texture = ExtResource("8_jpxx7")

[node name="Button" type="Button" parent="."]
offset_left = 259.0
offset_top = 331.0
offset_right = 357.0
offset_bottom = 435.0
text = "DEBUG"

[node name="Button2" type="Button" parent="."]
offset_left = 829.0
offset_top = 353.0
offset_right = 1002.0
offset_bottom = 420.0
text = "CLOSE"

[node name="Text" type="Node2D" parent="."]
script = ExtResource("19_6w6yt")

[node name="bubble" type="Sprite2D" parent="Text"]
position = Vector2(780, 85)
texture = ExtResource("20_4mqni")

[node name="RichTextLabel" type="RichTextLabel" parent="Text"]
offset_left = 699.0
offset_top = 43.0
offset_right = 886.0
offset_bottom = 124.0

[node name="Timer" type="Timer" parent="Text"]

[node name="RectHead" type="ColorRect" parent="."]
visible = false
offset_left = -25.0
offset_top = -11.0
offset_right = 1207.0
offset_bottom = 711.0
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="RectHead"]
libraries = {
"": SubResource("AnimationLibrary_ibbse")
}
autoplay = "RESET"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = 96.0
offset_top = 547.0
offset_right = 465.0
offset_bottom = 594.0
text = "Player    LV19    HP"
label_settings = SubResource("LabelSettings_yppvp")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
